tdf#144576 Copy a table from Writer to plain text editor as a Matrix

sw ascii filter
 - check for table nodes, output them seperately with formating
   to be displayed as a matrix when copy/pasted to a text file

sw qa filter ascii
 - add new test suite along with test to check for correct output

Change-Id: I8ca31bced3860e8e9752db8530ea6caaf31f2e5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164833
Reviewed-by: Hossein <hossein@libreoffice.org>
Tested-by: Jenkins