sw/source/filter/ascii/wrtasc.hxx
@@ -31,6 +31,7 @@ class SwASCWriter : public Writer
     OUString m_sLineEnd;
 
     virtual ErrCode WriteStream() override;
+    void WriteTable(SwTableNode* pTableNd, SwTextNode* pNd);
 
 public:
     SwASCWriter(std::u16string_view rFilterName);
